feat: Application Context Command Handler Factory

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'java-test-fixtures'
     id 'com.github.sherter.google-java-format' version '0.9'
 }
 
@@ -8,11 +9,25 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://maven.pkg.github.com/montealegreluis/service-buses")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+            password = project.findProperty("gpr.token") ?: System.getenv("TOKEN")
+        }
+    }
 }
 
 dependencies {
+    implementation "io.vavr:vavr:0.10.4"
+    api 'com.montealegreluis:service-buses:2.0.0'
+    api 'org.springframework:spring-context:5.3.15'
+
+    testImplementation testFixtures('com.montealegreluis:service-buses:2.0.0')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
+    testFixturesImplementation testFixtures('com.montealegreluis:service-buses:2.0.0')
 }
 
 test {
