--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java-library'
     id 'java-test-fixtures'
+    id 'jacoco'
+    id 'info.solidsoft.pitest' version '1.7.0'
     id 'com.github.sherter.google-java-format' version '0.9'
 }
 
@@ -32,4 +34,21 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy("jacocoTestReport")
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        html.destination file("${buildDir}/coverage")
+    }
+}
+
+pitest {
+    threads = 4
+    outputFormats = ['HTML']
+    timestampedReports = false
+    junit5PluginVersion = '0.15'
+    coverageThreshold = 83
+    mutationThreshold = 98
 }
