--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/montealegreluis/services-buses-spring-boot")
+            url = uri("https://maven.pkg.github.com/montealegreluis/service-buses-spring-boot")
             credentials {
                 username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                 password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
@@ -44,11 +44,19 @@ dependencies {
     implementation "io.vavr:vavr:0.10.4"
     api 'com.montealegreluis:service-buses:2.0.0'
     api 'org.springframework:spring-context:5.3.15'
+    api 'org.springframework:spring-tx:5.3.15'
 
     testImplementation testFixtures('com.montealegreluis:service-buses:2.0.0')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'com.h2database:h2:2.1.210'
+    testImplementation 'org.springframework.boot:spring-boot-autoconfigure:2.6.2'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
+    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
+    testFixturesImplementation 'org.springframework.boot:spring-boot-autoconfigure:2.6.2'
+    testFixturesImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
+    testFixturesImplementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3'
     testFixturesImplementation testFixtures('com.montealegreluis:service-buses:2.0.0')
 }
 
@@ -69,6 +77,6 @@ pitest {
     outputFormats = ['HTML']
     timestampedReports = false
     junit5PluginVersion = '0.15'
-    coverageThreshold = 83
+    coverageThreshold = 87
     mutationThreshold = 98
 }
