--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply from: rootProject.file('hooks.gradle')
 repositories {
     mavenCentral()
     maven {
-        url = uri("https://maven.pkg.github.com/montealegreluis/service-buses")
+        url = uri("https://maven.pkg.github.com/montealegreluis/service-buses-middleware")
         credentials {
             username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
             password = project.findProperty("gpr.token") ?: System.getenv("TOKEN")
@@ -42,7 +42,7 @@ publishing {
 
 dependencies {
     implementation "io.vavr:vavr:0.10.4"
-    api 'com.montealegreluis:service-buses:2.0.0'
+    api 'com.montealegreluis:service-buses-middleware:1.0.0'
     api 'org.springframework:spring-context:5.3.15'
     api 'org.springframework:spring-tx:5.3.15'
 
