--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  main:
+    banner-mode: off
   profiles:
     active: local
     include: ${spring.application.name}-${spring.profiles.active}.properties
